force-app/main/default/objects/Inventory_Position__c/Inventory_Position__c.object-meta.xml
<CustomObject>
    <label>Inventory Position</label>
    <nameField>
        <displayFormat>IP-{YYYY}-{MM}-{0000000000}</displayFormat>
        <label>Inventory Position</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>