force-app/main/default/objects/Inventory_Position__c/fields/Aged_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Aged_Bucket__c</fullName>
    <label>Aged Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Aged_Buckets</valueSetName>
    </valueSet>
</CustomField>