force-app/main/default/objects/Inventory_Position__c/fields/Available_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Available_Inventory__c</fullName>
    <description>Used in Community -Marketplace reports.</description>
    <formula>Product_Name__r.Available_Inventory__c</formula>
    <inlineHelpText>Used in Community -Marketplace reports.</inlineHelpText>
    <label>Available Inventory</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>