force-app/main/default/objects/Inventory_Position__c/fields/Billable_Cultivation_Tax__c.field-meta.xml
<CustomField>
    <fullName>Billable_Cultivation_Tax__c</fullName>
    <formula>IF(ISBLANK(TEXT(Receiving_Line__r.Purchase_Order_Line__r.Billable_Cultivation_Tax__c)),&quot;Missing Billable Cultivation Tax Input&quot;,TEXT(Receiving_Line__r.Purchase_Order_Line__r.Billable_Cultivation_Tax__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billable Cultivation Tax</label>
    <type>Text</type>
</CustomField>