force-app/main/default/objects/Inventory_Position__c/fields/Bin_Location__c.field-meta.xml
<CustomField>
    <fullName>Bin_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Bin in the Rack Level</inlineHelpText>
    <label>Bin Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Bin_Location__c.Rack_Level__c</field>
            <operation>equals</operation>
            <valueField>$Source.Rack_Level__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Bin_Location__c</referenceTo>
    <relationshipLabel>Inventory Positions</relationshipLabel>
    <relationshipName>Inventory_Positions</relationshipName>
    <type>Lookup</type>
</CustomField>