force-app/main/default/objects/Inventory_Position__c/fields/Cannabis_Category_2__c.field-meta.xml
<CustomField>
    <fullName>Cannabis_Category_2__c</fullName>
    <formula>TEXT(Receiving_Line__r.Purchase_Order_Line__r.Cannabis_Category_2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cannabis Category 2</label>
    <type>Text</type>
</CustomField>