force-app/main/default/objects/Inventory_Position__c/fields/Cannabis_Category__c.field-meta.xml
<CustomField>
    <fullName>Cannabis_Category__c</fullName>
    <description>Used in Community -Marketplace reports.</description>
    <formula>text(Product_Name__r.Cannabis_Category_1__c )</formula>
    <inlineHelpText>Used in Community -Marketplace reports.</inlineHelpText>
    <label>Cannabis Category 1</label>
    <type>Text</type>
</CustomField>