force-app/main/default/objects/Inventory_Position__c/fields/Cannabis_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Cannabis_Ratio__c</fullName>
    <description>Used in Community -Marketplace reports.</description>
    <formula>Product_Name__r.Cannabis_Ratio_1__c</formula>
    <inlineHelpText>Used in Community -Marketplace reports.</inlineHelpText>
    <label>Cannabis Ratio 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>