force-app/main/default/objects/Inventory_Position__c/fields/CDB__c.field-meta.xml
<CustomField>
    <fullName>CDB__c</fullName>
    <description>Used in Community -Marketplace reports.</description>
    <formula>Product_Name__r.CDB_Amount__c</formula>
    <inlineHelpText>Used in Community -Marketplace reports.</inlineHelpText>
    <label>CDB (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>