force-app/main/default/objects/Inventory_Position__c/fields/COA_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>COA_Expiration_Date__c</fullName>
    <formula>Harvest_Batch_Code__r.COA_Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COA Expiration Date</label>
    <type>Date</type>
</CustomField>