force-app/main/default/objects/Inventory_Position__c/fields/COA_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>COA_Issued_Date__c</fullName>
    <inlineHelpText>Date in which COA was issued, COA expires 12 month from date of issue.</inlineHelpText>
    <label>Del_COA Issued Date</label>
    <type>Date</type>
</CustomField>