force-app/main/default/objects/Inventory_Position__c/fields/COA_Issued_Date_New__c.field-meta.xml
<CustomField>
    <fullName>COA_Issued_Date_New__c</fullName>
    <formula>Harvest_Batch_Code__r.COA_Issued_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COA Issued Date</label>
    <type>Date</type>
</CustomField>