force-app/main/default/objects/Inventory_Position__c/fields/COA_Number__c.field-meta.xml
<CustomField>
    <fullName>COA_Number__c</fullName>
    <inlineHelpText>COA Number issued and reported to the BCC</inlineHelpText>
    <label>Del_COA Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>