force-app/main/default/objects/Inventory_Position__c/fields/COA_Number_New__c.field-meta.xml
<CustomField>
    <fullName>COA_Number_New__c</fullName>
    <formula>Harvest_Batch_Code__r.COA_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COA Number</label>
    <type>Text</type>
</CustomField>