force-app/main/default/objects/Inventory_Position__c/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <formula>if( Receiving_Line__c  = &apos;&apos; , CreatedDate,
Receiving_Line__r.CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Received</label>
    <type>DateTime</type>
</CustomField>