force-app/main/default/objects/Inventory_Position__c/fields/Days_in_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Inventory__c</fullName>
    <description>OLD : Sales_Order_Line__r.Sales_Order__r.Ship_Confirmation_Date__c - DATEVALUE(Date_Received__c) Use this field in Page layout and reports</description>
    <formula>IF(ISBLANK(Inventory_Last_Movement_date__c ), TODAY () - DATEVALUE(Date_Received__c)+ 1, Total_Days_in_Inventory__c 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>