force-app/main/default/objects/Inventory_Position__c/fields/Elapsed_Days__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_Days__c</fullName>
    <formula>IF(ISBLANK(Inventory_Last_Movement_date__c ), DAY(today()), DAY(Inventory_Last_Movement_date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elapsed Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>