force-app/main/default/objects/Inventory_Position__c/fields/Harvest_Batch_Code__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Batch_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch ID</label>
    <referenceTo>Harvest_Batch_Code__c</referenceTo>
    <relationshipLabel>Inventory Positions</relationshipLabel>
    <relationshipName>Inventory_Positions</relationshipName>
    <type>Lookup</type>
</CustomField>