force-app/main/default/objects/Inventory_Position__c/fields/Harvest_Batch_or_Lot_Code__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Batch_or_Lot_Code__c</fullName>
    <inlineHelpText>Harvest Batch ID or Lot Code</inlineHelpText>
    <label>Del_Batch ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>