force-app/main/default/objects/Inventory_Position__c/fields/Hold__c.field-meta.xml
<CustomField>
    <fullName>Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Inventory OnHOld for Order Allocation</inlineHelpText>
    <label>Hold</label>
    <type>Checkbox</type>
</CustomField>