force-app/main/default/objects/Inventory_Position__c/fields/Inventory_Gross_Weight__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Gross_Weight__c</fullName>
    <description>Inventory_Qty__c *  Product_Name__r.Unit_Gross_Weight__c</description>
    <formula>if( MOQ__c = 1, Inventory_Qty__c * Product_Name__r.Unit_Gross_Weight__c,
if(MOD(Inventory_Qty__c, MOQ__c ) = 0, IP_Case_Qty__c *   Product_Name__r.Carton_Gross_Weight__c  ,

(((Inventory_Qty__c - MOD(Inventory_Qty__c, MOQ__c ))/ MOQ__c ) * Product_Name__r.Carton_Gross_Weight__c ) +

MOD(Inventory_Qty__c, MOQ__c ) * Product_Name__r.Unit_Gross_Weight__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Default Value Measured in LBS</inlineHelpText>
    <label>IP Gross Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>