force-app/main/default/objects/Inventory_Position__c/fields/Inventory_Last_Movement_date__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Last_Movement_date__c</fullName>
    <description>Capture IP movement date to calculate total inventory days in Site.</description>
    <label>Inventory Last Movement date</label>
    <type>Date</type>
</CustomField>