force-app/main/default/objects/Inventory_Position__c/fields/Inventory_Location__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Inventory_Location__c.Site_Name__c</field>
            <operation>equals</operation>
            <valueField>$Source.Site__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Inventory_Location__c</referenceTo>
    <relationshipLabel>Inventory Positions</relationshipLabel>
    <relationshipName>Inventory_Positions</relationshipName>
    <type>Lookup</type>
</CustomField>