force-app/main/default/objects/Inventory_Position__c/fields/Inventory_Qty__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Qty__c</fullName>
    <formula>Qty_On_Hand__c + Qty_Allocated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>