force-app/main/default/objects/Inventory_Position__c/fields/IP_Case_Qty__c.field-meta.xml
<CustomField>
    <fullName>IP_Case_Qty__c</fullName>
    <formula>Inventory_Qty__c /  Product_Name__r.MOQ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IP Case Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>