force-app/main/default/objects/Inventory_Position__c/fields/Lab_Test_Status__c.field-meta.xml
<CustomField>
    <fullName>Lab_Test_Status__c</fullName>
    <label>Lab Test Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lab_Test_Status</valueSetName>
    </valueSet>
</CustomField>