force-app/main/default/objects/Inventory_Position__c/fields/Last_IP_Location__c.field-meta.xml
<CustomField>
    <fullName>Last_IP_Location__c</fullName>
    <label>Last IP Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>