force-app/main/default/objects/Inventory_Position__c/fields/License_Premise__c.field-meta.xml
<CustomField>
    <fullName>License_Premise__c</fullName>
    <formula>(Receiving_Line__r.Purchase_Order_Line__r.Purchase_Order__r.Supplier_Address__c)+&quot;, &quot;+ (Receiving_Line__r.Purchase_Order_Line__r.Purchase_Order__r.Supplier_City_State_Zip__c)</formula>
    <label>License Premise</label>
    <type>Text</type>
</CustomField>