force-app/main/default/objects/Inventory_Position__c/fields/MOQ__c.field-meta.xml
<CustomField>
    <fullName>MOQ__c</fullName>
    <description>Used in Community -Marketplace reports.</description>
    <formula>Product_Name__r.MOQ__c</formula>
    <inlineHelpText>Used in Community -Marketplace reports.</inlineHelpText>
    <label>MOQ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>