force-app/main/default/objects/Inventory_Position__c/fields/On_Hand_Value__c.field-meta.xml
<CustomField>
    <fullName>On_Hand_Value__c</fullName>
    <formula>Unit_Cost__c * Inventory_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Hand Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>