force-app/main/default/objects/Inventory_Position__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ownership</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inventory Positions</relationshipLabel>
    <relationshipName>Inventory_Positions</relationshipName>
    <type>Lookup</type>
</CustomField>