force-app/main/default/objects/Inventory_Position__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Used in Community -Marketplace reports.</description>
    <formula>text(Product_Name__r.Family)</formula>
    <inlineHelpText>Used in Community -Marketplace reports.</inlineHelpText>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>