force-app/main/default/objects/Inventory_Position__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <formula>Receiving_Line__r.Purchase_Order_Line__r.Purchase_Order__r.Name</formula>
    <label>Purchase Order</label>
    <type>Text</type>
</CustomField>