force-app/main/default/objects/Inventory_Position__c/fields/Qty_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Qty_Allocated__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Qty Allocated</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>