force-app/main/default/objects/Inventory_Position__c/fields/Qty_On_Hand__c.field-meta.xml
<CustomField>
    <fullName>Qty_On_Hand__c</fullName>
    <label>Qty On Hand</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>