force-app/main/default/objects/Inventory_Position__c/fields/Quantity_Type__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Type__c</fullName>
    <description>Used in Community -Marketplace reports.</description>
    <formula>text(Product_Name__r.Quantity_Type__c )</formula>
    <inlineHelpText>Used in Community -Marketplace reports.</inlineHelpText>
    <label>Quantity Type</label>
    <type>Text</type>
</CustomField>