force-app/main/default/objects/Inventory_Position__c/fields/Rack__c.field-meta.xml
<CustomField>
    <fullName>Rack__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Rack in the Inventory location</inlineHelpText>
    <label>Rack</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Rack__c.Inventory_Location__c</field>
            <operation>equals</operation>
            <valueField>$Source.Inventory_Location__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Rack__c</referenceTo>
    <relationshipLabel>Inventory Positions</relationshipLabel>
    <relationshipName>Inventory_Positions</relationshipName>
    <type>Lookup</type>
</CustomField>