force-app/main/default/objects/Inventory_Position__c/fields/Rack_Level__c.field-meta.xml
<CustomField>
    <fullName>Rack_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Rack Level in the Rack</inlineHelpText>
    <label>Rack Level</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Rack_Level__c.Rack__c</field>
            <operation>equals</operation>
            <valueField>$Source.Rack__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Rack_Level__c</referenceTo>
    <relationshipLabel>Inventory Positions</relationshipLabel>
    <relationshipName>Inventory_Positions</relationshipName>
    <type>Lookup</type>
</CustomField>