force-app/main/default/objects/Inventory_Position__c/fields/Receiving_Line__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiving Line</label>
    <referenceTo>Receiving_Line__c</referenceTo>
    <relationshipLabel>Inventory Positions</relationshipLabel>
    <relationshipName>Inventory_Positions</relationshipName>
    <type>Lookup</type>
</CustomField>