force-app/main/default/objects/Inventory_Position__c/fields/Retail_Unit_Form_Factor__c.field-meta.xml
<CustomField>
    <fullName>Retail_Unit_Form_Factor__c</fullName>
    <description>Used in Community -Marketplace reports.</description>
    <formula>text(Product_Name__r.Retail_Unit_Form_Factor__c)</formula>
    <inlineHelpText>Used in Community -Marketplace reports.</inlineHelpText>
    <label>Retail Unit Form Factor</label>
    <type>Text</type>
</CustomField>