force-app/main/default/objects/Inventory_Position__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <formula>HYPERLINK( Sales_Order_Line__r.Sales_Order__c  , Sales_Order_Line__r.Sales_Order__r.Name)</formula>
    <label>Sales Order</label>
    <type>Text</type>
</CustomField>