force-app/main/default/objects/Inventory_Position__c/fields/SO_Status__c.field-meta.xml
<CustomField>
    <fullName>SO_Status__c</fullName>
    <formula>TEXT(Sales_Order_Line__r.Sales_Order__r.SO_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SO Status</label>
    <type>Text</type>
</CustomField>