force-app/main/default/objects/Inventory_Position__c/fields/Stocking_UOM__c.field-meta.xml
<CustomField>
    <fullName>Stocking_UOM__c</fullName>
    <description>Used in Community -Marketplace reports.</description>
    <formula>text(Product_Name__r.Stocking_UOM__c )</formula>
    <inlineHelpText>Used in Community -Marketplace reports.</inlineHelpText>
    <label>Stocking UOM</label>
    <type>Text</type>
</CustomField>