force-app/main/default/objects/Inventory_Position__c/fields/Strain__c.field-meta.xml
<CustomField>
    <fullName>Strain__c</fullName>
    <description>Used in Community -Marketplace reports.</description>
    <formula>Product_Name__r.Strain__r.Name</formula>
    <label>Strain</label>
    <type>Text</type>
</CustomField>