force-app/main/default/objects/Inventory_Position__c/fields/Strain_Type__c.field-meta.xml
<CustomField>
    <fullName>Strain_Type__c</fullName>
    <description>Used in Community -Marketplace reports.</description>
    <formula>Product_Name__r.Strain_Type__c</formula>
    <inlineHelpText>Used in Community -Marketplace reports.</inlineHelpText>
    <label>Strain Type</label>
    <type>Text</type>
</CustomField>