force-app/main/default/objects/Inventory_Position__c/fields/Supplier_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_License_Number__c</fullName>
    <formula>Receiving_Line__r.Purchase_Order_Line__r.Purchase_Order__r.Supplier_License__r.License_Number__c</formula>
    <label>Supplier License Number</label>
    <type>Text</type>
</CustomField>