force-app/main/default/objects/Inventory_Position__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <formula>Receiving_Line__r.Purchase_Order_Line__r.Purchase_Order__r.Supplier_Name__r.Name</formula>
    <label>Supplier Name</label>
    <type>Text</type>
</CustomField>