force-app/main/default/objects/Inventory_Position__c/fields/Terpene__c.field-meta.xml
<CustomField>
    <fullName>Terpene__c</fullName>
    <description>Used in Community -Marketplace reports.</description>
    <formula>Product_Name__r.Terpene_percent__c</formula>
    <inlineHelpText>Used in Community -Marketplace reports.</inlineHelpText>
    <label>Terpene (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>