force-app/main/default/objects/Inventory_Position__c/fields/THC_MG_G__c.field-meta.xml
<CustomField>
    <fullName>THC_MG_G__c</fullName>
    <description>Used in Community -Marketplace reports.</description>
    <formula>Product_Name__r.THC_MG_G__c</formula>
    <inlineHelpText>Used in Community -Marketplace reports.</inlineHelpText>
    <label>THC (MG/G)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>