force-app/main/default/objects/Inventory_Position__c/fields/Total_Days_in_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Total_Days_in_Inventory__c</fullName>
    <description>DO NOT modify/delete. Field used to store IP days store in the site. This field is also used in &quot;Days in Inventory&quot; logic. DO NOT ENABLE in PAGE LAYOUT or in REPORT.</description>
    <label>Total Days in Inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>