force-app/main/default/objects/Inventory_Position__c/fields/Total_Product_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Product_Volume__c</fullName>
    <description>Calculate qty on hand * unit cubic volume of product
(Inventory_Qty__c * Product_Name__r.Unit_Cubic_Volume__c)</description>
    <formula>if( MOQ__c  = 1, Inventory_Qty__c  *  Product_Name__r.Unit_Cubic_Volume__c, 
if(MOD(Inventory_Qty__c, MOQ__c ) = 0, IP_Case_Qty__c  *   Product_Name__r.Case_Cubic_Volume__c, 

(((Inventory_Qty__c - MOD(Inventory_Qty__c, MOQ__c ))/ MOQ__c ) * Product_Name__r.Case_Cubic_Volume__c ) + 

MOD(Inventory_Qty__c, MOQ__c )  *  Product_Name__r.Unit_Cubic_Volume__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculate qty on hand * unit cubic volume of product</inlineHelpText>
    <label>IP Cubic Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>