force-app/main/default/objects/Inventory_Position__c/fields/UID__c.field-meta.xml
<CustomField>
    <fullName>UID__c</fullName>
    <formula>Receiving_Line__r.UID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Del_UID</label>
    <type>Text</type>
</CustomField>