force-app/main/default/objects/Inventory_Position__c/fields/Unit_Cannabis_Weight__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cannabis_Weight__c</fullName>
    <description>Used in Community -Marketplace reports.</description>
    <formula>Receiving_Line__r.Purchase_Order_Line__r.WAVG_Cannabis_Weight__c</formula>
    <inlineHelpText>Used in Community -Marketplace reports.</inlineHelpText>
    <label>Unit Cannabis Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>