force-app/main/default/objects/Inventory_Position__c/fields/Unit_Cultivation_Tax_2__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cultivation_Tax_2__c</fullName>
    <formula>Receiving_Line__r.Purchase_Order_Line__r.Unit_Cultivation_Tax_2__c</formula>
    <label>Unit Cultivation Tax 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>