force-app/main/default/objects/Inventory_Position__c/fields/Unit_Cultivation_Tax__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cultivation_Tax__c</fullName>
    <description>Used in Community -Marketplace reports.</description>
    <formula>IF(Billable_Cultivation_Tax__c = &quot;Yes&quot;, Receiving_Line__r.Purchase_Order_Line__r.WAVG_Unit_Cultivation_Tax__c , Null)</formula>
    <inlineHelpText>Used in Community -Marketplace reports.</inlineHelpText>
    <label>Unit Cultivation Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>