force-app/main/default/objects/Inventory_Position__c/listViews/A_Test_Room.listView-meta.xml
<ListView>
    <fullName>A_Test_Room</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Product_Description__c</columns>
    <columns>Ownership__c</columns>
    <columns>Quantity_Type__c</columns>
    <columns>Inventory_Qty__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>Harvest_Batch_Code__c</columns>
    <columns>UID_New__c</columns>
    <columns>Lab_Test_Status__c</columns>
    <columns>Hold__c</columns>
    <columns>Bin_Location__c</columns>
    <columns>Rack_Level__c</columns>
    <columns>Rack__c</columns>
    <columns>Inventory_Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inventory_Location__c</field>
        <operation>equals</operation>
        <value>Test Room</value>
    </filters>
    <label>A. Test Room</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>