force-app/main/default/objects/Inventory_Position__c/listViews/B_CannaWaste_Hold.listView-meta.xml
<ListView>
    <fullName>B_CannaWaste_Hold</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Product_Description__c</columns>
    <columns>Ownership__c</columns>
    <columns>Quantity_Type__c</columns>
    <columns>Inventory_Qty__c</columns>
    <columns>Harvest_Batch_Code__c</columns>
    <columns>UID_New__c</columns>
    <columns>Lab_Test_Status__c</columns>
    <columns>Hold__c</columns>
    <columns>Inventory_Hold_Reason_Code__c</columns>
    <columns>Bin_Location__c</columns>
    <columns>Rack_Level__c</columns>
    <columns>Rack__c</columns>
    <columns>Inventory_Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inventory_Location__c</field>
        <operation>equals</operation>
        <value>CannaWaste Hold</value>
    </filters>
    <label>B. CannaWaste Hold</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>