force-app/main/default/objects/Inventory_Position__c/listViews/Expired_COAs.listView-meta.xml
<ListView>
    <fullName>Expired_COAs</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Ownership__c</columns>
    <columns>Inventory_Qty__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>Harvest_Batch_Code__c</columns>
    <columns>UID_New__c</columns>
    <columns>Lab_Test_Status__c</columns>
    <columns>COA_Expiration_Date__c</columns>
    <columns>Hold__c</columns>
    <columns>Inventory_Hold_Reason_Code__c</columns>
    <columns>Bin_Location__c</columns>
    <columns>Rack_Level__c</columns>
    <columns>Rack__c</columns>
    <columns>Inventory_Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>COA_Expiration_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Inventory_Location__c</field>
        <operation>notEqual</operation>
        <value>Delivered,Packaged,Test Sampled,Transferred,CannaWaste,Quarantine</value>
    </filters>
    <label>Expired COAs</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>